# Mediocre2

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/mediocre/: library.h  tracks.h
core/source/: library.cpp  tracks.cpp
gtk/: CMakeLists.txt
qwidget/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mediocre_qwidget_en_150.ts
qwidget/ui/: track_delegate.cpp  track_delegate.h
ui/: CMakeLists.txt
ui/include/ui/: controls.h  controls_win32.h  ui.h
ui/notes/: notes.txt
ui/source/win32/: controls.cpp  controls_win32.cpp
win32/: CMakeLists.txt  list_view.cpp  list_view.h  main.cpp  track_view.cpp  track_view.h
